trunk/Archive2/24/f97f83b094c8ed/output
main.cpp:9:55: error: expected ')'
    func_sig func = (func_sig) dlsym(handle, signature;
                                                      ^
main.cpp:9:37: note: to match this '('
    func_sig func = (func_sig) dlsym(handle, signature;
                                    ^
main.cpp:21:47: warning: extension used [-Wlanguage-extension-token]
    static func_sig func = get_func<func_sig>(__FUNCDNAME__);
                                              ^
main.cpp:27:47: warning: extension used [-Wlanguage-extension-token]
    static func_sig func = get_func<func_sig>(__FUNCDNAME__);
                                              ^
2 warnings and 1 error generated.
